Afisare BMI template

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -701,6 +701,9 @@
                                 </div>
                             </div>
                         </form>
+                        <div id="afisare-rezultat">
+                            
+                        </div>
                     </div>
                 </div>
             </div>
