--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
                             <textarea class="form-control" rows="6" id="message" placeholder="Message" required="required" data-validation-required-message="Please enter your message"></textarea>
                             <p class="help-block text-danger"></p>
                         </div>
-                        <div>
+                        <div class="center">
                             <button class="btn btn-outline-primary" type="submit" id="sendMessageButton">Send Message</button>
                         </div>
                     </form>
