--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.min.css" rel="stylesheet">
+    <link href="css/contact.css" rel="stylesheet">
 </head>
 
 <body class="bg-white">
