--- a/bulking.html
+++ b/bulking.html
@@ -20,6 +20,7 @@
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.min.css" rel="stylesheet">
     <link href="css/bulking.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
 </head>
 
 <body class="bg-white">
