--- a/about.html
+++ b/about.html
@@ -21,6 +21,8 @@
     <link href="css/style.min.css" rel="stylesheet">
     <link href="css/about.css" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
+    <link href="css/contact.css" rel="stylesheet">
+    
 </head>
 
 <body class="bg-white">
