--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta content="Free Website Template" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
+    <link href="img/favicon.png" rel="icon">
 
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -22,7 +22,7 @@
     <link href="css/about.css" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
     <link href="css/contact.css" rel="stylesheet">
-    
+   
 </head>
 
 <body class="bg-white">
