--- a/about.html
+++ b/about.html
@@ -119,8 +119,8 @@
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
                 <h4 class="text-primary mb-4">Get In Touch</h4>
-                <p><i class="fa fa-phone-alt mr-2"></i>0771451266</p>
-                <p><i class="fa fa-envelope mr-2"></i>activateurselfbuisness@gmail.com</p>
+                <p style="color:white"><i class="fa fa-phone-alt mr-2"></i>0771451266</p>
+                <p style="color:white"><i class="fa fa-envelope mr-2"></i>activateurselfbuisness@gmail.com</p>
                 <div class="d-flex justify-content-start mt-4">
                     <!--<a class="btn btn-outline-light rounded-circle text-center mr-2 px-0"
                         style="width: 40px; height: 40px;" href="#"><i class="fab fa-facebook-f"></i></a>
