--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div id="blog-carousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="w-100" src="https://i.pinimg.com/736x/0c/c1/5e/0cc15e78e9c43d1a8fdc17c33ea955a9.jpg" alt="Image">
+                    <img class="w-100" src="img/poza principala" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <h2 class="display-2 m-0 mt-2 mt-md-4 text-white font-weight-bold text-capitalize">Best Nutrition Platform </h2>
                         <a href="feature.html" class="btn btn-lg btn-outline-light mt-3 mt-md-5 py-md-3 px-md-5">Join Us Now</a>
